tests/type-error/coverage/Maybe.vix
type Maybe a = Nothing | Just a

fromJust (Just a) = a
